# apriltag-rs

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  foo.py  out.txt  pixi.toml  pyproject.toml  setup.py  trace.txt
apriltag_rs/: .gitignore  __init__.py  apriltag_rs_native.pyi
bench-tool/: Cargo.toml
bench-tool/configs/: cluster-pixels-20.toml  cluster-pixels-50.toml  cpu.toml  cpu4.toml  cpu8.toml  decimate-1.5.toml  decimate-3.toml  decimate-4.toml  decimate-none.toml  gpu.toml  hamming-0.toml  hamming-2.toml  kitchen-sink.toml  linefit-loose.toml  linefit-strict.toml  no-refine.toml  no-sharpening.toml  sigma-0.4.toml  sigma-0.8.toml  sigma-1.5.toml  speed-max.toml
bench-tool/src/: main.rs
benches/: pipeline.rs
benches/common/: mod.rs
com/mindlin/apriltagrs/: AprilTagDetector.java  AprilTagFamily.java  AprilTagParams.java  Library.java
examples/: cpu_vs_gpu.rs  demo.rs  detect.ipynb  detect.rs  opencv_demo.rs  sample.ipynb  show_pnm.rs
java/com/mindlin/apriltagrs/: AprilTagDetection.java  AprilTagDetections.java  AprilTagDetector.java  AprilTagFamily.java  AprilTagLibrary.java  AprilTagPose.java  AprilTagPoseEstimate.java  AprilTagPoseEstimator.java  Image2D.java  NativeObject.java
java/com/mindlin/apriltagrs/errors/: AccelerationNotAvailableException.java  AprilTagDetectorBuildException.java  OpenCLException.java  OpenCLUnavailableException.java  ThreadPoolBuildException.java
java/com/mindlin/apriltagrs/util/: Image2D.java  IntArrayList.java  MathUtil.java  Matrix33.java  Point2d.java  Point2i.java  Vec3.java
python/apriltag_rs/: .gitignore  __init__.py  _native.pyi
scripts/: analyze_benchmark.py
src/: apriltag.rs  apriltag_math.rs  detection.rs  detector.rs  lib.rs  quickdecode.rs  sys.rs
src/dbg/: mod.rs  timeprofile.rs
src/detector/: builder.rs  config.rs  debug.rs  error.rs  mod.rs
src/families/: _tag25h7.rs  mod.rs  tag16h5.rs  tag25h9.rs  tag36h10.rs  tag36h10_codes.rs  tag36h11.rs  tag36h11_codes.rs  tagCircle21h7.rs  tagCircle49h12.rs  tagCircle49h12_codes.rs  tagCustom48h12.rs  tagCustom48h12_codes.rs  tagStandard41h12.rs  tagStandard41h12_codes.rs  tagStandard52h13.rs  tagStandard52h13_codes.rs  util.rs
src/families/generator/: hamming.rs  layout.rs  mod.rs
src/ffi/: c.rs  mod.rs  python.rs  util.rs
src/ffi/c/: detector.rs  extras.rs  family.rs  img.rs  img_u8_t.rs  matd.rs  mod.rs  pose.rs  shim.rs  util.rs  zarray.rs
src/ffi/jni/: detection.rs  detector.rs  family.rs  mod.rs  pose.rs  util.rs
src/ffi/jni/util/: buffer.rs  jptr.rs  mod.rs
src/ffi/python/: debug.rs  detection.rs  detector.rs  family.rs  mod.rs  numpy.rs  pose.rs  shim.rs  timeout.rs
src/ocl/: 01_quad_decimate.cl  02_quad_sigma.cl  03_threshold.cl  04_unionfind_complex.cl  04_unionfind_simple.cl  buffer.rs  mod.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  test.rs
src/pose/: homography.rs  mod.rs
src/quad_decode/: edges.rs  greymodel.rs  homography.rs  mod.rs  sharpening.rs
src/quad_thresh/: grad_cluster.rs  linefit.rs  minmax.rs  mod.rs  quadfit.rs  threshold.rs  uf.rs
src/quad_thresh/unionfind/: atomic.rs  mod.rs  reference.rs  uf2d.rs
src/quickdecode/: mod.rs  table.rs
src/util/: color.rs  dims.rs  homography.rs  mem.rs  mod.rs  multiple.rs  timeprofile.rs
src/util/geom/: line2d.rs  mod.rs  point2d.rs  poly2d.rs  quad.rs
src/util/image/: buffer.rs  common.rs  gray.rs  index.rs  luma.rs  mod.rs  pixel.rs  pixels.rs  pnm.rs  ps.rs  rgb.rs  rows.rs  slice.rs  svg.rs
src/util/math/: index.rs  mat3.rs  mod.rs  poly.rs  vec2.rs  vec3.rs
src/util/math/mat/: chol.rs  index.rs  mat.rs  mat22.rs  mat33.rs  mat99.rs  mod.rs  op.rs  opm.rs  plu.rs  svd.rs
src/util/math/vec2/: arm.rs  mod.rs  reference.rs
src/util/pool/: mod.rs  static.rs
src/vulkan/: 01_quad_decimate.glsl  mod.rs  stage1.rs
src/wgpu/: 01_quad_decimate.wgsl  02_quad_sigma.wgsl  02_quad_sigma_img.wgsl  03_threshold.wgsl  03c_threshim.wgsl  buffer.rs  error.rs  mod.rs  quad_decimate.rs  quad_sigma.rs  stage1.rs  stage1_img.rs  stage2.rs  stage2_img.rs  stage3.rs  stage4.rs  stage4_bke.rs  test.rs  util.rs
src/wgpu/shader/: 00_util.wgsl  00a_test.wgsl  00b_download.wgsl  01_quad_decimate.wgsl  01_quad_decimate_img_32.wgsl  01_quad_decimate_img_f.wgsl  02_quad_sigma.wgsl  02_quad_sigma_img.wgsl  03a_tile_minmax.wgsl  03b_tile_blur.wgsl  03c_threshim.wgsl  04_unionfind.wgsl  04a_bke.wgsl  04b_bke.wgsl  04b_bke_black.wgsl  04c_bke.wgsl  04d_bke.wgsl  04e_bke.wgsl  04f_ha4.wgsl  04f_ha4_b.wgsl  04g_count.wgsl  05_cluster.wgsl
src/wgpu/util/: async_buffer.rs  buffer.rs  buffer_traits.rs  debug.rs  dev_select.rs  mod.rs  program.rs  query.rs  texture.rs
