[package]
name = "apriltag-rs"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib"]

[features]
cpython = ["dep:cpython"]
jni = ["dep:jni"]
cffi = ["dep:libc", "dep:nix", "dep:errno"]
debug = []
debug_ps = ["debug"]
opencl = ["dep:ocl"]
wgpu = ["dep:wgpu"]
extra_debug = ["debug", "debug_ps"]
compare_reference = ["apriltag-sys/deep", "dep:float-cmp", "dep:libc"]
opencv=["dep:opencv"]
# vulkan=["dep:vulkano", "dep:vulkano-shaders"]
default = [ "debug", "extra_debug", "wgpu", "cpython" ]

[profile.dev]
default = ["cpython", "jni", "cffi", "debug", "extra_debug"]

[profile.release]
default = ["cpython", "jni", "cffi"]


[dependencies]
arrayvec = "0.7.4"
rand = "0.8.5"
rayon = "1.10.0"
datasize = "0.2.15"
clap = { version = "4.5.4", features=["derive"] }
parking_lot = "0.12.2"
raw-parts = "2.0.0"
hashbrown = { version = "0.14.5", features = ["rayon"] }
futures = "0.3.30"
proc-macro2 = "1.0.66"
bytemuck = "1.15.0"
concurrent-queue = "2.5.0"
# vulkano-shaders = { version = "0.33.0", optional = true }
async-trait = "0.1.80"
thiserror = "1.0.49"

# Feature: Python FFI (cpython)
[dependencies.cpython]
version = "0.7.1"
optional = true
features=["extension-module"]

# Feature: Java FFI (jni)
[dependencies.jni]
version = "0.21.1"
optional = true

# Feature: C FFI (cffi)
[dependencies.libc]
version = "0.2.154"
optional = true
[dependencies.nix]
version = "0.28.0"
optional = true
[dependencies.errno]
version = "0.3.8"
optional = true

# Feature: compare_reference
[dependencies.apriltag-sys]
path="../apriltag-rust-deep/apriltag-sys"
optional = true
[dependencies.float-cmp]
version = "0.9.0"
optional = true

# Feature: OpenCL
[dependencies.ocl]
version = "0.19.7"
optional = true
# [dependencies.opencl3]
# version = "0.9.3"
# optional = true
[dependencies.wgpu]
version = "0.20.0"
optional = true
features = ["vulkan-portability"]

[dev-dependencies]
image = "0.25.1"

[dependencies.opencv]
version = "0.91.2"
features = ["clang-runtime"]
optional = true

# [dependencies.vulkano]
# version = "0.33.0"
# optional = true
