[package]
name = "apriltag-rs"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib"]

[features]
python = ["dep:pyo3"]
jni = ["dep:jni"]
cffi = ["dep:libc", "dep:nix", "dep:errno"]
debug = []
debug_ps = ["debug"]
opencl = ["dep:ocl"]
wgpu = ["dep:wgpu"]
extra_debug = ["debug", "debug_ps"]
compare_reference = ["apriltag-sys/deep", "dep:float-cmp", "dep:libc"]
opencv=["dep:opencv"]
# vulkan=["dep:vulkano", "dep:vulkano-shaders"]
default = [ "debug", "extra_debug", "python" ]

[profile.dev]
default = ["python", "jni", "cffi", "debug", "extra_debug"]

[profile.release]
default = ["python", "jni", "cffi"]


[dependencies]
arrayvec = "0.7.6"
rand = "0.10.0"
rayon = "1.11.0"
datasize = "0.2.15"
clap = { version = "4.6.0", features=["derive"] }
parking_lot = "0.12.5"
raw-parts = "2.2.2"
hashbrown = { version = "0.16.1", features = ["rayon"] }
futures = "0.3.32"
proc-macro2 = "1.0.106"
bytemuck = "1.24.0"
concurrent-queue = "2.5.0"
# vulkano-shaders = { version = "0.33.0", optional = true }
async-trait = "0.1.89"
thiserror = "2.0.18"
cpu-time = "1.0.0"

# Feature: Python FFI (pyo3)
[dependencies.pyo3]
version = "0.28.2"
optional = true
features=["extension-module", "experimental-inspect"]

# Feature: Java FFI (jni)
[dependencies.jni]
version = "0.22.4"
optional = true

# Feature: C FFI (cffi)
[dependencies.libc]
version = "0.2.154"
optional = true
[dependencies.nix]
version = "0.31.2"
optional = true
[dependencies.errno]
version = "0.3.14"
optional = true

# Feature: compare_reference
[dependencies.apriltag-sys]
path="../apriltag-rust-deep/apriltag-sys"
optional = true

[dependencies.float-cmp]
version = "0.10.0"
optional = true

# Feature: OpenCL
[dependencies.ocl]
version = "0.19.7"
optional = true
# [dependencies.opencl3]
# version = "0.9.3"
# optional = true
[dependencies.wgpu]
version = "29.0.0"
optional = true
features = ["vulkan-portability"]

[dev-dependencies]
image = "0.25.10"

[dependencies.opencv]
version = "0.98.1"
features = ["clang-runtime"]
optional = true

# [dependencies.vulkano]
# version = "0.33.0"
# optional = true

[[example]]
name = "opencv_demo"
required_features = ["opencv"]