[package]
name = "apriltag-rs"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib"]

[features]
# Python FFI bindings
python = ["dep:pyo3", "dep:parking_lot"]
# JNI FFI bindings
jni = ["dep:jni"]
# C FFI Bindings (we try to match libapriltag)
cffi = ["dep:libc", "dep:nix", "dep:errno", "dep:parking_lot"]
cbindgen = ["cffi"]

debug = ["dep:cpu-time"]
debug_ps = ["debug"]
opencl = ["dep:ocl"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:async-trait", "dep:futures"]
extra_debug = ["debug", "debug_ps"]
wgpu_validate = ["wgpu"]
# Compare to apriltag-sys
compare_reference = ["apriltag-sys/deep", "dep:float-cmp", "dep:libc"]
opencv=["dep:opencv"]
# Benchmarking support
bench = ["tag36h11"]

# Enable specific tag families
tag16h5 = []
tag25h9 = []
tag36h10 = []
tag36h11 = []
tagCircle21h7 = []
tagCustom48h12 = []
tagCircle49h12 = []
tagStandard41h12 = []
tagStandard52h13 = []
# Commonly used tag families
default-families = [
	"tag16h5",
	"tag25h9",
	"tag36h10",
	"tag36h11",
]
# Enable all tag families (this may be slow)
all-families = [
	"tag16h5",
	"tag25h9",
	"tag36h10",
	"tag36h11",
	"tagCircle21h7",
	"tagCustom48h12",
	"tagCircle49h12",
	"tagStandard41h12",
	"tagStandard52h13",
]

# vulkan=["dep:vulkano", "dep:vulkano-shaders"]
default = [
	"default-families",
]


[dependencies]
arrayvec = "0.7.6"
rand = "0.10.0"
rayon = "1.11.0"
datasize = "0.2.15"
hashbrown = { version = "0.16.1", features = ["rayon"] }
# vulkano-shaders = { version = "0.33.0", optional = true }
thiserror = "2.0.18"

# Optional: behind feature flags
parking_lot = { version = "0.12.5", optional = true }
futures = { version = "0.3.32", optional = true }
bytemuck = { version = "1.24.0", optional = true }
async-trait = { version = "0.1.89", optional = true }
cpu-time = { version = "1.0.0", optional = true }

# Feature: Python FFI (pyo3)
[dependencies.pyo3]
version = "0.28.2"
optional = true
features=["extension-module", "experimental-inspect"]

# Feature: Java FFI (jni)
[dependencies.jni]
version = "0.22.4"
optional = true

# Feature: C FFI (cffi)
[dependencies.libc]
version = "0.2.154"
optional = true
[dependencies.nix]
version = "0.31.2"
optional = true
[dependencies.errno]
version = "0.3.14"
optional = true

# Feature: compare_reference
[dependencies.apriltag-sys]
path="../apriltag-rust-deep/apriltag-sys"
optional = true

[dependencies.float-cmp]
version = "0.10.0"
optional = true

# Feature: OpenCL
[dependencies.ocl]
version = "0.19.7"
optional = true
# [dependencies.opencl3]
# version = "0.9.3"
# optional = true
[dependencies.wgpu]
version = "29.0.0"
optional = true
features = ["vulkan-portability"]

[dev-dependencies]
image = "0.25.10"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.6.0", features = ["derive"] }

[dependencies.opencv]
version = "0.98.1"
features = ["clang-runtime"]
optional = true

# [dependencies.vulkano]
# version = "0.33.0"
# optional = true

[[example]]
name = "opencv_demo"
required-features = ["opencv"]

[[bench]]
name = "pipeline"
harness = false
required-features = ["bench"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
