[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "apriltag_rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
	"numpy >= 1.26"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "apriltag_rs._native"