[package]
name = "apriltag-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apriltag-bench"
path = "src/main.rs"

[dependencies]
apriltag-rs = { path = "..", default-features = false, features = ["default-families", "bench"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
image = "0.25"
anyhow = { version = "1.0.102", features = ["backtrace"] }
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.18"

[features]
opencl = ["apriltag-rs/opencl"]
wgpu = ["apriltag-rs/wgpu"]
extra_debug = ["apriltag-rs/extra_debug"]